export const snapshot = {};

snapshot[`pr-collector > should output help with -h flag 1`] = `
stdout:
'
Usage:   pr-collector [options]
Version: 1.0.0                 

Description:

  Collect PRs from multiple GitHub repositories.

Options:

  -h, --help              - Show this help.                                                                                  
  -V, --version           - Show the version number for this program.                                                        
  -s, --state    <state>  - Filter PRs by state. Default to "open".               (Default: \\x1b[32m"open"\\x1b[39m, Values: \\x1b[32m"open"\\x1b[39m, \\x1b[32m"closed"\\x1b[39m)
  -u, --user     <user>   - GitHub user name. Default to the authenticated user.                                             

Environment variables:

  GITHUB_USER_TOKEN  <token>  - GitHub Personal Access token.  (required)

'
stderr:
""
`;

snapshot[`pr-collector > should output help with --help flag 1`] = `
stdout:
'
Usage:   pr-collector [options]
Version: 1.0.0                 

Description:

  Collect PRs from multiple GitHub repositories.

Options:

  -h, --help              - Show this help.                                                                                  
  -V, --version           - Show the version number for this program.                                                        
  -s, --state    <state>  - Filter PRs by state. Default to "open".               (Default: \\x1b[32m"open"\\x1b[39m, Values: \\x1b[32m"open"\\x1b[39m, \\x1b[32m"closed"\\x1b[39m)
  -u, --user     <user>   - GitHub user name. Default to the authenticated user.                                             

Environment variables:

  GITHUB_USER_TOKEN  <token>  - GitHub Personal Access token.  (required)

'
stderr:
""
`;

snapshot[`pr-collector > should output short version with -V flag 1`] = `
stdout:
"1.0.0
"
stderr:
""
`;

snapshot[`pr-collector > should output long version with --version flag 1`] = `
stdout:
"pr-collector 1.0.0
"
stderr:
""
`;

snapshot[`pr-collector > should print help message and error message without args 1`] = `
stdout:
'
Usage:   pr-collector [options]
Version: 1.0.0                 

Description:

  Collect PRs from multiple GitHub repositories.

Options:

  -h, --help              - Show this help.                                                                                  
  -V, --version           - Show the version number for this program.                                                        
  -s, --state    <state>  - Filter PRs by state. Default to "open".               (Default: \\x1b[32m"open"\\x1b[39m, Values: \\x1b[32m"open"\\x1b[39m, \\x1b[32m"closed"\\x1b[39m)
  -u, --user     <user>   - GitHub user name. Default to the authenticated user.                                             

Environment variables:

  GITHUB_USER_TOKEN  <token>  - GitHub Personal Access token.  (required)

'
stderr:
'  error: Missing required environment variable "GITHUB_USER_TOKEN".

'
`;

snapshot[`pr-collector > should print error message for unknown option 1`] = `
stdout:
'
Usage:   pr-collector [options]
Version: 1.0.0                 

Description:

  Collect PRs from multiple GitHub repositories.

Options:

  -h, --help              - Show this help.                                                                                  
  -V, --version           - Show the version number for this program.                                                        
  -s, --state    <state>  - Filter PRs by state. Default to "open".               (Default: \\x1b[32m"open"\\x1b[39m, Values: \\x1b[32m"open"\\x1b[39m, \\x1b[32m"closed"\\x1b[39m)
  -u, --user     <user>   - GitHub user name. Default to the authenticated user.                                             

Environment variables:

  GITHUB_USER_TOKEN  <token>  - GitHub Personal Access token.  (required)

'
stderr:
'  error: Missing required environment variable "GITHUB_USER_TOKEN".

'
`;

snapshot[`pr-collector > should print error message for unknown command 1`] = `
stdout:
'
Usage:   pr-collector [options]
Version: 1.0.0                 

Description:

  Collect PRs from multiple GitHub repositories.

Options:

  -h, --help              - Show this help.                                                                                  
  -V, --version           - Show the version number for this program.                                                        
  -s, --state    <state>  - Filter PRs by state. Default to "open".               (Default: \\x1b[32m"open"\\x1b[39m, Values: \\x1b[32m"open"\\x1b[39m, \\x1b[32m"closed"\\x1b[39m)
  -u, --user     <user>   - GitHub user name. Default to the authenticated user.                                             

Environment variables:

  GITHUB_USER_TOKEN  <token>  - GitHub Personal Access token.  (required)

'
stderr:
'  error: Missing required environment variable "GITHUB_USER_TOKEN".

'
`;
